# mishchess

./: .gitignore  CMakeLists.txt
.github/workflows/: release.yml
src/: board.c  game.c  main.c  render.c
src/include/: board.h  game.h  logger.h  render.h
